--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ body {
 	border-width: 3px;
 	border-color: #14a58c; 
 	margin-top: 15px;
+	width: 7%;
 }
 
 #portfolio p {
@@ -213,6 +214,7 @@ body {
 	border-width: 3px;
 	border-color: #c8d9e5; 
 	margin-top: 15px;
+	width: 7%;
 }
 
 #services p {
@@ -265,6 +267,7 @@ footer hr {
 	border-color: #273a71;
 	border-width: 3px;
 	margin-top: 15px;
+	width: 7%;
 }
 
 #myModal {
