--- a/css/style.css
+++ b/css/style.css
@@ -319,6 +319,9 @@ footer hr {
 
 /***********Media queries ***************/
 @media only screen and (min-width: 150px) and (max-width: 766px){
-	
+	.navbar img{
+		max-height: 30px;
+		max-width: 90px; 
+	}
 }
 /***********Media queries ***************/
