--- a/css/style.css
+++ b/css/style.css
@@ -319,7 +319,7 @@ footer hr {
 
 /***********Media queries ***************/
 @media only screen and (min-width: 150px) and (max-width: 766px){
-	.navbar img{
+	.navbar-brand img {
 		max-height: 30px;
 		max-width: 90px; 
 	}
